@@ -1,132 +1,201 @@
 # Online Healthcare Management System
 
+**Version**: 3.0 - Phase 3 Complete with GUI Implementation  
+**Status**: Production Ready ✅
+
 ## Project Overview
 
-The Online Healthcare Management System is a console-based Java application designed to manage healthcare operations efficiently. It supports user roles (Admin, Doctor, Patient) with features like user management, appointment booking, medical records, and system settings. Built using Core Java with OOP principles, JDBC for database connectivity, and secure password hashing with bcrypt.
+The Online Healthcare Management System is a comprehensive Java application designed to manage healthcare operations efficiently. Built with Core Java, JDBC, MySQL, and JavaFX, it provides both console-based and modern GUI interfaces for managing appointments, medical records, billing, and user administration.
+
+### Key Features:
+- ✅ **Dual Interface**: Console (CLI) and Modern GUI (JavaFX)
+- ✅ **User Management**: Register, authenticate, update users (Admin, Doctor, Patient)
+- ✅ **Appointment Management**: Book, view, update, and cancel appointments
+- ✅ **Medical Records**: Doctors can add/view patient medical history
+- ✅ **Doctor Schedules**: Manage and view doctor availability
+- ✅ **Billing System**: Create invoices and track payments
+- ✅ **Reviews & Ratings**: Patients can rate and review doctors (1-5 stars)
+- ✅ **System Settings**: Admin-configurable system parameters
+- ✅ **Security**: Input validation, SQL injection prevention, bcrypt password hashing
+- ✅ **Role-Based Access**: Different dashboards for Admin, Doctor, and Patient
+
+---
+
+## Technology Stack
+
+| Layer | Technology |
+|-------|------------|
+| Frontend | JavaFX GUI + Console UI |
+| Backend | Core Java |
+| Database | MySQL (5.7+) |
+| Connection | JDBC |
+| Security | bcrypt (jBCrypt) |
+| Build | Maven Ready |
+
+---
+
+## Project Structure
+
+```
+online-healthcare-management-system/
+├── database/
+│   ├── schema.sql                 # Original database tables
+│   └── schema_extended.sql        # Billing & Reviews tables
+│
+├── src/main/java/
+│   ├── database/                  # DAO Classes (7 files)
+│   ├── models/                    # Model Classes (11 files)
+│   ├── utils/                     # Utilities
+│   ├── Main.java                  # Console Application
+│   └── HealthcareGUIApp.java      # JavaFX GUI Application
+│
+├── lib/                        # Dependencies
+├── README.md                   # This file
+├── SETUP_GUIDE.md              # Detailed setup guide
+└── ERROR_FIXES.md              # Common issues and solutions
+```
+
+---
+
+## System Requirements
+
+- **Java**: JDK 11 or higher
+- **MySQL**: Version 5.7+
+- **JavaFX**: 21.0.1 (for GUI)
+- **RAM**: Minimum 2GB
+- **Storage**: 1GB free disk space
+
+---
+
+## Quick Start
+
+### Console Application
+```bash
+# Compile
+javac -cp "lib/*" -d bin src/main/java/**/*.java
+
+# Run
+java -cp "bin:lib/*" Main
+```
+
+### GUI Application
+```bash
+# Compile
+javac --module-path /path/to/javafx/lib --add-modules javafx.controls,javafx.fxml \
+  -cp "lib/*" -d bin src/main/java/**/*.java
+
+# Run
+java --module-path /path/to/javafx/lib --add-modules javafx.controls,javafx.fxml \
+  -cp "bin:lib/*" HealthcareGUIApp
+```
+
+### Default Credentials
+- **Admin**: admin / password
+- **Doctor**: doctor1 / password
+- **Patient**: patient1 / password
+
+---
 
 ## Features
 
-- **User Management**: Register, authenticate, update, and delete users (Admin, Doctor, Patient).
-- **Appointment Management**: Book, view, update, and cancel appointments.
-- **Medical Records**: Doctors can add/view patient records.
-- **Doctor Schedules**: Manage and view doctor availability.
-- **System Settings**: Admins can configure system-wide settings.
-- **Security**: Input validation, SQL injection prevention, and bcrypt password hashing.
+### Admin Dashboard
+- User management (CRUD)
+- View all appointments
+- System settings
+- Generate reports
 
-## Requirements
+### Doctor Dashboard
+- View appointments
+- Manage medical records
+- Schedule management
 
-### Software Prerequisites
+### Patient Dashboard
+- Book appointments
+- View medical history
+- Check doctor ratings
 
-- **Java**: JDK 8 or higher (e.g., OpenJDK 11+ recommended).
-- **MySQL**: Version 5.7 or higher (with MySQL Server running locally or remotely).
-- **IDE**: IntelliJ IDEA, Eclipse, or any Java-compatible IDE (optional, but recommended for development).
-- **Build Tool**: None required (pure Java), but Maven/Gradle can be used for dependency management.
+---
 
-### Hardware Prerequisites
+## Database Schema
 
-- Minimum 2GB RAM, 1GB free disk space.
-- Stable internet connection for remote DB access (if not local).
+**7 Tables:**
+1. users
+2. appointments
+3. medical_records
+4. doctor_schedules
+5. system_settings
+6. billing
+7. doctor_reviews
 
-## Dependencies
+**2 Views:**
+- doctor_statistics
+- patient_billing_history
 
-- **MySQL Connector/J**: Download from [MySQL Downloads](https://dev.mysql.com/downloads/connector/j/) (e.g., mysql-connector-java-8.0.33.jar).
-- **jBCrypt**: Download from [jBCrypt GitHub](https://github.com/dwdyer/jbcrypt) (e.g., jbcrypt-0.4.jar).
-- Place JARs in the project root or add to classpath.
+---
 
 ## Setup Instructions
 
-### 1. Clone or Download the Project
+1. **Install dependencies**: MySQL, Java JDK 11+
+2. **Clone repository**: `git clone <url>`
+3. **Setup database**: Run schema.sql & schema_extended.sql
+4. **Configure**: Update database.properties
+5. **Compile**: Use commands above
+6. **Run**: Choose console or GUI version
 
-Download the project files and place them in a directory (e.g., HealthcareManagementSystem).
-Ensure the project structure matches:
+For detailed instructions, see [SETUP_GUIDE.md](SETUP_GUIDE.md)
 
-```
-HealthcareManagementSystem/
-├── src/main/java/
-│   ├── models/ (User.java, Doctor.java, etc.)
-│   ├── database/ (DatabaseConnection.java, UserDAO.java, etc.)
-│   ├── services/ (UserService.java, etc.)
-│   ├── ui/ (AdminDashboard.java, Main.java, etc.)
-│   └── resources/ (database.properties)
-├── lib/ (Place JAR dependencies here)
-└── README.md
-```
-
-### 2. Set Up the Database
-
-- Install and start MySQL Server.
-- Create a database named `healthcare_db`.
-- Run the SQL script to create tables and insert sample data (from the initial schema provided):
-
-```sql
--- Run this in MySQL Workbench or command line
-CREATE DATABASE healthcare_db;
-USE healthcare_db;
--- [Paste the full schema from earlier messages]
-```
-
-- Ensure the roles table has data: `INSERT INTO roles (roleId, roleName) VALUES (1, 'admin'), (2, 'doctor'), (3, 'patient');`
-
-### 3. Configure Database Connection
-
-Edit `src/main/resources/database.properties`:
-
-```
-db.url=jdbc:mysql://localhost:3306/healthcare_db?useSSL=false&serverTimezone=UTC&autoReconnect=true
-db.username=your_mysql_username
-db.password=your_mysql_password
-```
-
-Replace placeholders with your MySQL credentials.
-
-### 4. Add Dependencies to Classpath
-
-Place `mysql-connector-java-8.0.33.jar` and `jbcrypt-0.4.jar` in the `lib/` directory.
-When compiling/running, include them in the classpath (see commands below).
-
-### 5. Compile the Project
-
-Open a terminal in the project root.
-Compile all Java files:
-
-```bash
-javac -cp "lib/*" -d bin src/main/java/**/*.java
-```
-
-This compiles to a `bin/` directory (create it if needed).
-
-### 6. Run the Project
-
-Run the main class (assuming Main.java in ui/):
-
-```bash
-java -cp "bin:lib/*" ui.Main
-```
-
-Follow the console prompts to log in (e.g., default admin: username `admin`, password `password` – update in DB if needed).
-Use role-based menus: Admin for management, Doctor for records/schedules, Patient for bookings.
-
-## Usage
-
-- **Login**: Enter username and password at startup.
-- **Admin Dashboard**: Manage users, appointments, settings.
-- **Doctor Dashboard**: View/update schedules, add/view medical records.
-- **Patient Dashboard**: Book/view appointments, view medical history.
-- **Navigation**: Use numbered menus in the console. Type 'exit' to quit.
+---
 
 ## Troubleshooting
 
-- **Compilation Errors**: Ensure JDK is installed (`java -version`). Check for missing imports or JARs in classpath.
-- **Database Connection Issues**: Verify MySQL is running, credentials are correct, and DB exists. Check firewall for port 3306.
-- **Runtime Errors**: Check logs (console output) for exceptions. Ensure tables are created and populated.
-- **Password Issues**: Passwords are hashed; use authenticateUser for login. Reset via DB if needed.
-- **Common Fixes**: Restart MySQL, update JAR versions, or run as administrator.
+- **JDBC Driver error**: Add mysql-connector to classpath
+- **Connection refused**: Check MySQL is running
+- **Table not found**: Run SQL schema files
+- **JavaFX error**: Ensure --module-path is correct
 
-## Contributing
+See [ERROR_FIXES.md](ERROR_FIXES.md) for more solutions.
 
-Fork the repository, make changes, and submit a pull request.
-Follow Java coding standards and add unit tests (e.g., JUnit).
+---
 
-## Authors
+## Architecture
 
-Developed as part of a Core Java project. Contact for support.
+**Design Patterns:**
+- DAO Pattern for data access
+- MVC for GUI separation
+- Singleton for connections
+
+**Security:**
+- bcrypt password hashing
+- SQL injection prevention
+- Input validation
+- Role-based access control
+
+---
+
+## Future Enhancements
+
+- Email notifications
+- Payment gateway integration
+- Mobile app
+- Advanced analytics
+- Telemedicine features
+
+---
+
+## License
+
+MIT License - Open Source
+
+---
+
+## Author
+
+**Madhurima Kumari**
+
+---
+
+## Status
+
+✅ **PRODUCTION READY** - Phase 3 Complete with Full GUI Implementation
+
+**Last Updated**: December 8, 2025
